--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,21 @@
 spring:
+  profiles.active: dev
+
+---
+spring:
+  profiles: dev
   datasource:
     url: jdbc:mysql://localhost:3306/demo_warehouse_db?useSSL=false
+    username: root
+    password: abc.abc.123
+    platform: mysql
+    driver-class-name: com.mysql.jdbc.Driver
+
+---
+spring:
+  profiles: test
+  datasource:
+    url: jdbc:mysql://localhost:3306/test_warehouse_db?useSSL=false
     username: root
     password: abc.abc.123
     platform: mysql
