it looks like jdbc-mysql-driver is not needed in configuration yml file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     username: root
     password: abc.abc.123
     platform: mysql
-    driver-class-name: com.mysql.jdbc.Driver
+#    driver-class-name: com.mysql.jdbc.Driver
 
 ---
 spring:
@@ -19,4 +19,4 @@ spring:
     username: root
     password: abc.abc.123
     platform: mysql
-    driver-class-name: com.mysql.jdbc.Driver
+#    driver-class-name: com.mysql.jdbc.Driver
