--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>jdbc.crud</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>info.nenkov</groupId>
+    <artifactId>warehouse</artifactId>
     <version>0.0.2</version>
     <packaging>jar</packaging>
     <name>demo</name>
@@ -92,7 +92,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.epam.training.DemoApplication</mainClass>
+                            <mainClass>info.nenkov.warehouse.DemoApplication</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
